Update Only_mele.java
Refactor